@@ -10,6 +10,7 @@
 - Added IsIntegrallyClosed for ideals of numerical semigroups
 - Added IdealOfNumericalSemigroupBySmallElements
 - Added AddPseudoFrobeniusNumberToIdeal
+- Added NormalizedIdeals for a numerical semigroup
 
 1.3.1 -> 1.4.0
 - Added NumericalSemigroupsWithFrobeniusNumberPC
